# waven

./: .gitignore  README.md  environement_old.yml  environment.yml  pipeline_config.json  pipeline_correlation_plots.py  pyproject.toml  requirements.txt  ui.py  wavelet_zarr.py
docs/: conf.py
docs/html/: faq.html  genindex.html  index.html  installation.html  quickstart.html  search.html
docs/source/: conf.py  index.rst
examples/: example.py  good.txt  new-gui.txt  old-analysis-utils.txt  old-pink-noise.txt  pipeline_correlation_plots.py  run_waven_parts.py  temp.txt  temp_gui.txt
pydocs/: Waven.html  index.html  search.js
pydocs/Waven/: Analysis_Utils.html  LoadPinkNoise.html  WaveletGenerator.html  suite2p.html  zebraGUI.html
pydocs/Waven/suite2p/: utils.html
pydocs/Waven/suite2p/utils/: cortex_lab_utils.html  mpeppy.html  timelinepy.html  twophopy.html  utils.html
src/Waven/: Analysis_Utils.py  LoadPinkNoise.py  WaveletGenerator.py  __init__.py  config.py  gui.py  performance.py  pipeline.py  plotting.py  time_alignment.py  wavelet_io.py  zarr_compat.py  zebraGUI.py
src/Waven/suite_ephys/: DIO.py  readTrodesExtractedDataFile3.py
src/waven/: __init__.py  analysis_utils.py  config.py  gui.py  pipeline.py  plotting.py
src/waven.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_zarr_compat.py
your_experiment/input/: metadata.txt
