[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "waven"
version = "0.1.0"
authors = [
  { name="Sophie Skriabine", email="sophie.skriabine@gmail.com" },
  { name="Abdelrahman A", email="abdwaleed.a@gmail.com" },
]
description = "wavelet based analysis of neural spikes"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "matplotlib",
    "numpy",
    "numba",
    "opencv-python",
    "pandas",
    "scikit-image",
    "scikit-learn",
    "scipy",
    "seaborn",
    "tifffile",
    "torch>=2.1.2",
    "tensorly",
    "zarr",
    "numexpr",
    "tqdm",
    "psutil",
    "spikeinterface"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["waven*"]